--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
                     <a class="nav-link" href="http://www.njit.edu">NJIT</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="https://canvas.njit.edu/">NJIT Canvas</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled">Disabled</a>
