added new menu to the homepage

--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,9 @@
                     <a class="nav-link" href="https://canvas.njit.edu/">NJIT Canvas</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="https://www.njit.edu/bursar/">NJIT Bursar</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link disabled">Disabled</a>
                 </li>
             </ul>
